fix: delete whitespace

--- a/packages/components/src/dialog/styles.less
+++ b/packages/components/src/dialog/styles.less
@@ -98,5 +98,4 @@
   align-items: center;
   display: inline-flex;
   user-select: text;
-  white-space: pre-wrap;
 }
